test/testdata/bool/invalid_unary_op_error.lox
-true; // error: '-' operator cannot be used with type 'bool'
